Fix/UI family visibility toggle (#38)
